--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Segoe UI', sans-serif;
-  background: url('da326e4e-5085-4db9-9550-fe94f96fd880.png') no-repeat center center fixed;
+  background: url('https://hips.hearstapps.com/hmg-prod/images/digitally-created-3-dimensional-starry-sky-with-royalty-free-image-1744992067.pjpeg?crop=1xw:1xh;center,top&resize=1200:*') no-repeat center center fixed;
   background-size: cover;
   height: 100vh;
   color: white;
